Apply black formatting and update documentation
- Fix black formatting in demo_server.py
- Update README with Colab quickstart link
- Move notebook to notebooks directory

--- a/examples/firesense_quickstart.ipynb
+++ b/examples/firesense_quickstart.ipynb
@@ -6,7 +6,10 @@
    "source": [
     "# FireSense Quick Start\n",
     "\n",
-    "This notebook demonstrates how to install and use FireSense for fire detection in videos."
+    "This notebook demonstrates how to install and use FireSense for fire detection in videos.\n",
+    "Change runtime type to GPU (commonly T4).\n",
+    "\n",
+    "\"Runtime\" > \"Change runtime type\" > \"GPU\" to get a T4 GPU instance."
    ]
   },
   {
